--- a/aluno/planner/style.css
+++ b/aluno/planner/style.css
@@ -1,171 +1,519 @@
 .kebab {
-    cursor: pointer;
-    position: relative;
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 0 16px;
-    top: 12px;
-  }
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0 16px;
+  top: 12px;
+}
 
-  .kebab figure {
-    width: 6px;
-    height: 6px;
-    border-radius: 5px;
-    background: #05204a;
-    margin: 3px 0;
-  }
-  .middle {
-    transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
-    transform: scale(1);
-    position: relative;
-    box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
-    -webkit-filter: blur(0.1px);
-    filter: blur(0.1px);
-  }
-  .middle.active {
-    transform: scale(4.5);
-    transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
-    box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
-  }
-  
-  .cross {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    margin-top: -1px;
-    font-family: 'Nunito', sans-serif;
-    color: white;
-    transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
-    font-size: 22px;
-    user-select: none;
-  }
-  .cross.active {
-    transform: translate(-50%, -50%) scale(1);
-    transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
-  }
-  h1, a, li {
-    font-family: Roboto, sans-serif;
-  }
-  a, li {
-    color: #6b6b6b;
-    text-decoration: none;
-  }
-  .nav {
-    margin-left: 20%;
-  }
+.kebab figure {
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: #05204a;
+  margin: 3px 0;
+}
+.middle {
+  transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  transform: scale(1);
+  position: relative;
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+  -webkit-filter: blur(0.1px);
+  filter: blur(0.1px);
+}
+.middle.active {
+  transform: scale(4.5);
+  transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+}
 
-  .pontos{
-    transform: rotate(90deg);
-  }
-  .nav > li {
-    display: inline-block;
-    padding: 1em 18px;
-    cursor: pointer;
-  }
-
-  .nav > li:hover {
-    background: #ebebeb;
-  }
-  .dropdown {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    width: 14rem;
-    height: 12rem;
-    padding: 50%;
-    justify-content: space-between;
-    border-radius: 20px;
-    background-color: #f4f4f4;
-    right: 0;
-    top: 3em;
-    transition: all 0.25s ease-out;
-    transform: scale(0);
-    transform-origin: 100% 0;
-  }
-
-  .dropdown ul{
-    padding: 20px;
-  }
-
-  .dropdown img{
-    margin-right: 10%;
-  }
-.abrir{
+.cross {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  margin-top: -1px;
+  font-family: 'Nunito', sans-serif;
+  color: white;
+  transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  font-size: 22px;
+  user-select: none;
+}
+.cross.active {
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+}
+h1, a, li {
+  font-family: Roboto, sans-serif;
+}
+a, li {
+  color: #6b6b6b;
+  text-decoration: none;
+}
+.nav {
   margin-left: 20%;
 }
 
-  .kebab{
-    border-radius: 100px;
-  }
+.pontos{
+  transform: rotate(90deg);
+}
+.nav > li {
+  display: inline-block;
+  padding: 1em 18px;
+  cursor: pointer;
+}
 
-  .dropdown li {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
+.nav > li:hover {
+  background: #ebebeb;
+}
+.dropdown {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 14rem;
+  height: 12rem;
+  padding: 50%;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-color: #f4f4f4;
+  right: 0;
+  top: 3em;
+  transition: all 0.25s ease-out;
+  transform: scale(0);
+  transform-origin: 100% 0;
+  z-index: 999;
+}
 
-  .dropdown li a {
-    width: 100%;
-    padding: 1em 18px;
-    display: inline-block;
-    white-space: pre;
-    box-sizing: border-box;
-  }
-  .dropdown li a:hover {
-    background: #ebebeb;
-  }
-  .dropdown:hover ul {
-    transform: scale(1);
-  }
-  .dropdown.active {
-    transform: scale(1);
-    transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
-  }
-  .follow {
-    overflow: hidden;
-    width: 42px;
-    height: 42px;
-    border-radius: 50px;
-    background: #03A9F4;
-    display: block;
-    margin: 300px auto 0;
-    white-space: nowrap;
-    padding: 13px;
-    box-sizing: border-box;
-    color: white;
-    transition: all 0.2s ease;
-    font-family: Roboto, sans-serif;
-    text-decoration: none;
-    box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.2);
-  }
-  .follow i {
-    margin-right: 20px;
-    transition: margin-right 0.2s ease;
-  }
-  .follow:hover {
-    width: 134px;
-  }
-  .follow:hover i {
-    margin-right: 10px;
-  }
-  @media screen and (max-width: 800px) {
-    .follow {
-      margin: 400px auto 0;
-    }
-  }
-  
+.dropdown ul{
+  padding: 20px;
+}
 
+.dropdown img{
+  margin-right: 10%;
+}
+.abrir{
+margin-left: 20%;
+}
+
+.kebab{
+  border-radius: 100px;
+}
+
+.dropdown li {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.dropdown li a {
+  width: 100%;
+  padding: 1em 18px;
+  display: inline-block;
+  white-space: pre;
+  box-sizing: border-box;
+}
+.dropdown li a:hover {
+  background: #ebebeb;
+}
+.dropdown:hover ul {
+  transform: scale(1);
+}
 .dropdown.active {
   transform: scale(1);
-  transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
+  transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+}
+.follow {
+  overflow: hidden;
+  width: 42px;
+  height: 42px;
+  border-radius: 50px;
+  background: #03A9F4;
+  display: block;
+  margin: 300px auto 0;
+  white-space: nowrap;
+  padding: 13px;
+  box-sizing: border-box;
+  color: white;
+  transition: all 0.2s ease;
+  font-family: Roboto, sans-serif;
+  text-decoration: none;
+  box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.2);
+}
+.follow i {
+  margin-right: 20px;
+  transition: margin-right 0.2s ease;
+}
+.follow:hover {
+  width: 134px;
+}
+.follow:hover i {
+  margin-right: 10px;
+}
+@media screen and (max-width: 800px) {
+  .follow {
+    margin: 400px auto 0;
+  }
 }
 
 
+.dropdown.active {
+transform: scale(1);
+transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.kebab2 {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0 16px;
+  top: 12px;
+}
+
+.kebab2 figure {
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: #05204a;
+  margin: 3px 0;
+}
+.middle2 {
+  transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  transform: scale(1);
+  position: relative;
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+  -webkit-filter: blur(0.1px);
+  filter: blur(0.1px);
+}
+.middle2.active {
+  transform: scale(4.5);
+  transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+}
+
+.cross2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  margin-top: -1px;
+  font-family: 'Nunito', sans-serif;
+  color: white;
+  transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  font-size: 22px;
+  user-select: none;
+}
+.cross2.active {
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+}
+h1, a, li {
+  font-family: Roboto, sans-serif;
+}
+a, li {
+  color: #6b6b6b;
+  text-decoration: none;
+}
+
+.pontos2{
+  transform: rotate(90deg);
+}
+.nav2 > li {
+  display: inline-block;
+  padding: 1em 18px;
+  cursor: pointer;
+}
+
+.nav2 > li:hover {
+  background: #ebebeb;
+}
+.dropdown2 {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 19rem;
+  height: 12rem;
+  padding: 50%;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-color: #f4f4f4;
+  right: 0;
+  top: 3em;
+  transition: all 0.25s ease-out;
+  transform: scale(0);
+  transform-origin: 100% 0;
+  font-weight: 100;
+}
+
+.dropdown2 ul{
+  padding: 20px;
+}
+
+.dropdown2 img{
+  margin-right: 10%;
+}
+.abrir2{
+margin-left: 20%;
+}
+
+.kebab2{
+  border-radius: 100px;
+}
+
+.dropdown2 li {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.dropdown2 li a {
+  width: 100%;
+  padding: 1em 18px;
+  display: inline-block;
+  white-space: pre;
+  box-sizing: border-box;
+}
+.dropdown2 li a:hover {
+  background: #ebebeb;
+}
+.dropdown2:hover ul {
+  transform: scale(1);
+}
+.dropdown2.active {
+  transform: scale(1);
+  transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+}
+.follow {
+  overflow: hidden;
+  width: 42px;
+  height: 42px;
+  border-radius: 50px;
+  background: #03A9F4;
+  display: block;
+  margin: 300px auto 0;
+  white-space: nowrap;
+  padding: 13px;
+  box-sizing: border-box;
+  color: white;
+  transition: all 0.2s ease;
+  font-family: Roboto, sans-serif;
+  text-decoration: none;
+  box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 800px) {
+  .follow2 {
+    margin: 400px auto 0;
+  }
+}
+
+
+.dropdown2.active {
+transform: scale(1);
+transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.child-kebab2 {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0 16px;
+  top: 12px;
+}
+
+.child-kebab2 figure {
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: #05204a;
+  margin: 3px 0;
+}
+.child-middle2 {
+  transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  transform: scale(1);
+  position: relative;
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+  -webkit-filter: blur(0.1px);
+  filter: blur(0.1px);
+}
+.child-middle2.active {
+  transform: scale(4.5);
+  transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+}
+
+.child-cross2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  margin-top: -1px;
+  font-family: 'Nunito', sans-serif;
+  color: white;
+  transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  font-size: 22px;
+  user-select: none;
+}
+.child-cross2.active {
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+}
+h1, a, li {
+  font-family: Roboto, sans-serif;
+}
+a, li {
+  color: #6b6b6b;
+  text-decoration: none;
+}
+
+.child-pontos2{
+  transform: rotate(90deg);
+}
+.child-nav2 > li {
+  display: inline-block;
+  padding: 1em 18px;
+  cursor: pointer;
+}
+
+.child-nav2 > li:hover {
+  background: #ebebeb;
+}
+.child-dropdown2 {
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  width: 19rem;
+  height: 12rem;
+  padding: 50%;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-color: #f4f4f4;
+  right: 0;
+  top: 3em;
+  transition: all 0.25s ease-out;
+  transform: scale(0);
+  transform-origin: 100% 0;
+  font-weight: 100;
+}
+
+.child-dropdown2 ul{
+  padding: 20px;
+}
+
+.child-dropdown2 img{
+  margin-right: 10%;
+}
+
+.child-kebab2{
+  border-radius: 100px;
+}
+
+.child-dropdown2 li {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.child-dropdown2 li a {
+  width: 100%;
+  padding: 1em 18px;
+  display: inline-block;
+  white-space: pre;
+  box-sizing: border-box;
+}
+.child-dropdown2 li a:hover {
+  background: #ebebeb;
+}
+.child-dropdown2:hover ul {
+  transform: scale(1);
+}
+.child-dropdown2.active {
+  transform: scale(1);
+  transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+}
+.follow {
+  overflow: hidden;
+  width: 42px;
+  height: 42px;
+  border-radius: 50px;
+  background: #03A9F4;
+  display: block;
+  margin: 300px auto 0;
+  white-space: nowrap;
+  padding: 13px;
+  box-sizing: border-box;
+  color: white;
+  transition: all 0.2s ease;
+  font-family: Roboto, sans-serif;
+  text-decoration: none;
+  box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 800px) {
+  .follow2 {
+    margin: 400px auto 0;
+  }
+}
+
+
+.dropdown2.active {
+transform: scale(1);
+transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
+}
+
+
+
+
+
+
+
+
+
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -342,10 +690,6 @@ body {
     align-items: center;
 }
 
-.titulo img{
-   width: 50px;
-}
-
 .titulo h1{
     color: #05204A;
     font-weight: 400;
@@ -367,11 +711,12 @@ body {
 
 .buttons{
     display: flex;
+    width: 100%;
 }
 
 .modal-add-tarefa .primeiro-botao{
     border-radius: 0 0 20px 0px;
-    width: 100%;
+    width: 50%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #044177;
@@ -384,7 +729,7 @@ body {
 .modal-add-tarefa .segundo-botao{
     border-radius: 0 0 0 20px;
     margin-top: 2vh;
-    width: 100%;
+    width: 50%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #e3e3e3;
