--- a/aluno/planner/style.css
+++ b/aluno/planner/style.css
@@ -249,7 +249,7 @@ a, li {
   display: flex;
   flex-direction: column;
   width: 19rem;
-  height: 12rem;
+  height: 15rem;
   padding: 50%;
   justify-content: space-between;
   border-radius: 20px;
@@ -260,6 +260,7 @@ a, li {
   transform: scale(0);
   transform-origin: 100% 0;
   font-weight: 100;
+  z-index: 0;
 }
 
 .dropdown2 ul{
@@ -406,9 +407,18 @@ a, li {
   text-decoration: none;
 }
 
+ol, ul {
+  padding-left: 0rem;
+}
 .child-pontos2{
   transform: rotate(90deg);
 }
+
+.child-nav2{
+  display: flex;
+  z-index: 9999999999;
+}
+
 .child-nav2 > li {
   display: inline-block;
   padding: 1em 18px;
@@ -419,17 +429,16 @@ a, li {
   background: #ebebeb;
 }
 .child-dropdown2 {
-  position: absolute;
   display: none;
+  position: absolute;
   flex-direction: column;
   width: 19rem;
-  height: 12rem;
+  height: 15rem;
   padding: 50%;
   justify-content: space-between;
   border-radius: 20px;
   background-color: #f4f4f4;
-  right: 0;
-  top: 3em;
+  top: -50px;
   transition: all 0.25s ease-out;
   transform: scale(0);
   transform-origin: 100% 0;
@@ -523,6 +532,7 @@ body {
 }
 
 .container-geral{
+  z-index: -999;
     padding: 0 2% 0 5%;
 }
 
@@ -530,6 +540,7 @@ body {
     display: flex;
     justify-content: space-between;
     height: 80vh;
+    z-index: 0;
 }
 
 .tipo_usuario ul {
@@ -599,16 +610,22 @@ body {
 .listagem-topicos::-webkit-scrollbar {
     width: 12px;  
 }
-.topico::-webkit-scrollbar {
+.subtopico::-webkit-scrollbar {
     width: 12px;  
 }
 
 .topico{
-    margin-top: 5rem;
-    margin-right: 5rem;
-    align-items: center;
-    overflow-y: auto;
-   height: 70vh;
+  margin-top: 5rem;
+  margin-right: 5rem;
+  align-items: center;
+  height: 70vh;
+  position: relative;
+  z-index: 0;
+}
+
+.subtopico{
+  overflow-y: auto;
+  height: 60%;
 }
 
 .add-topico{
@@ -630,6 +647,7 @@ body {
     border-radius: 30px;
     font-weight: 300;
     padding: 15px;
+    z-index: 0;
 }
 
 .nome-tarefa{
@@ -647,6 +665,7 @@ body {
     border-radius: 20px;
     align-items: center;
     margin-top: 1rem;
+    z-index: 0;
 }
 
 .modal-add-tarefa input {
