--- a/aluno/planner/style.css
+++ b/aluno/planner/style.css
@@ -72,7 +72,7 @@ a, li {
   display: flex;
   flex-direction: column;
   width: 14rem;
-  height: 12rem;
+  height: 14rem;
   padding: 50%;
   justify-content: space-between;
   border-radius: 20px;
@@ -82,7 +82,7 @@ a, li {
   transition: all 0.25s ease-out;
   transform: scale(0);
   transform-origin: 100% 0;
-  z-index: 999;
+  z-index: 99999;
 }
 
 .dropdown ul{
@@ -93,7 +93,7 @@ a, li {
   margin-right: 10%;
 }
 .abrir{
-margin-left: 20%;
+margin-left: 15%;
 }
 
 .kebab{
@@ -104,6 +104,7 @@ margin-left: 20%;
   display: flex;
   flex-direction: row;
   width: 100%;
+  padding: 10px;
 }
 
 .dropdown li a {
@@ -113,8 +114,9 @@ margin-left: 20%;
   white-space: pre;
   box-sizing: border-box;
 }
-.dropdown li a:hover {
-  background: #ebebeb;
+.dropdown li:hover {
+  background: #e3e3e3;
+  border-radius: 20px;
 }
 .dropdown:hover ul {
   transform: scale(1);
@@ -253,14 +255,13 @@ a, li {
   padding: 50%;
   justify-content: space-between;
   border-radius: 20px;
-  background-color: #f4f4f4;
+  background-color: #eeeeee;
   right: 0;
   top: 3em;
   transition: all 0.25s ease-out;
   transform: scale(0);
   transform-origin: 100% 0;
   font-weight: 100;
-  z-index: 0;
 }
 
 .dropdown2 ul{
@@ -268,7 +269,7 @@ a, li {
 }
 
 .dropdown2 img{
-  margin-right: 10%;
+  margin-right: 5%;
 }
 .abrir2{
 margin-left: 20%;
@@ -281,7 +282,9 @@ margin-left: 20%;
 .dropdown2 li {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 100%;
+  padding: 15px;
 }
 
 .dropdown2 li a {
@@ -291,8 +294,9 @@ margin-left: 20%;
   white-space: pre;
   box-sizing: border-box;
 }
-.dropdown2 li a:hover {
-  background: #ebebeb;
+.dropdown2 li:hover {
+  background: #e3e3e3;
+  border-radius: 20px;
 }
 .dropdown2:hover ul {
   transform: scale(1);
@@ -416,7 +420,6 @@ ol, ul {
 
 .child-nav2{
   display: flex;
-  z-index: 9999999999;
 }
 
 .child-nav2 > li {
@@ -534,7 +537,6 @@ body {
 }
 
 .container-geral{
-  z-index: -999;
     padding: 0 2% 0 5%;
 }
 
@@ -542,7 +544,7 @@ body {
     display: flex;
     justify-content: space-between;
     height: 80vh;
-    z-index: 0;
+
 }
 
 .tipo_usuario ul {
@@ -622,7 +624,6 @@ body {
   align-items: center;
   height: 70vh;
   position: relative;
-  z-index: 0;
 }
 
 .subtopico{
@@ -649,7 +650,7 @@ body {
     border-radius: 30px;
     font-weight: 300;
     padding: 15px;
-    z-index: 0;
+
 }
 
 .nome-tarefa{
@@ -667,7 +668,7 @@ body {
     border-radius: 20px;
     align-items: center;
     margin-top: 1rem;
-    z-index: 0;
+
 }
 
 .modal-add-tarefa input {
@@ -767,7 +768,7 @@ body {
     height: 20%;
     padding: 5%;
     border-radius: 10px;
-    z-index: 99;
+;
     top: 55%;
     left: 20%;
 }
