--- a/aluno/planner/style.css
+++ b/aluno/planner/style.css
@@ -542,11 +542,20 @@ body {
     padding: 0 2% 0 5%;
 }
 
+.container-geral2{
+    padding: 0 2% 0 5%;
+}
+
 .container-topicos{
     display: flex;
     justify-content: space-between;
     height: 80vh;
+}
 
+.container-topicos2{
+  display: none;
+  justify-content: space-between;
+  height: 80vh;
 }
 
 .tipo_usuario ul {
@@ -573,7 +582,7 @@ body {
 .modal {
   margin-top: auto;
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   background-color: rgb(255, 255, 255);
   display: none;
   flex-direction: column;
@@ -637,11 +646,24 @@ body {
   padding: 15px;
 }
 
+.aluno-select{
+  width: 85%;
+  margin-top: 5%;
+}
+
 .lab-inp input {
   background-color: #e3e3e3;
   border-radius: 10px;
   border-bottom: 1px solid #05204a;
   padding: 15px;
+}
+
+.select-multiplo select{
+  margin-top: 5%;
+  border-bottom: 1px solid #05204a;
+  border-top: none;
+  border-right: none;
+  border-left: none;
 }
 
 .lab-inp label {
@@ -658,6 +680,7 @@ body {
 
 .modal h2{
   text-align: center;
+  margin-bottom: 2%;
 }
 
 .bg {
@@ -691,7 +714,7 @@ body {
   font-weight: 300;
   border: none;
   padding: 10px;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
   text-align: center;
 }
 
@@ -794,7 +817,7 @@ body {
     border-radius: 30px;
     font-weight: 300;
     padding: 15px;
-
+    overflow: hidden;
 }
 
 .nome-tarefa{
@@ -993,10 +1016,14 @@ padding: 1%;
   background-color: #044177;
   margin: 0.5%;
   border-radius: 10px;
- padding: 2% 2% 2% 0;
+ padding: 1% 1% 1% 0;
+ align-items: center;
 }
 
+
+
 .container_word{
+ 
    display: flex;
   align-items: center;
   justify-content: center;
@@ -1006,9 +1033,14 @@ padding: 1%;
   margin-right: 5%;
 }
 
+.word-logo{
+  width: 60px;
+}
+
 .text_card h1{
   font-size: 20px;
   color: white;
+  margin-top: 10%;
 }
 
 .text_card p{
@@ -1017,8 +1049,84 @@ padding: 1%;
 }
 
 .exit{
-  position: absolute;
-  width: 15px;
-  top: 74%;
-  left: 25%;
+  position: relative;
+  margin-top: -28%;
+  left: 9%;
 }
+
+.multiselect {
+  width: 200px;
+}
+
+.selectBox {
+  position: relative;
+}
+
+.selectBox select {
+  width: 100%;
+}
+
+.overSelect {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#checkboxes {
+  display: none;
+  border: 1px #dadada solid;
+}
+
+#checkboxes label {
+  display: block;
+}
+
+#checkboxes label:hover {
+  background-color: #1e90ff;
+}
+
+#imgPerfil {
+  object-fit: cover;
+  object-position: center center;
+}
+
+.img-container{
+  display: flex;
+  width: 85%;
+  overflow-y: auto;
+  overflow-x: auto;
+  margin-top: 5%;
+}
+
+.img-container img{
+  margin: 2%;
+}
+
+.img-container::-webkit-scrollbar {
+  height: 6px;
+  /* width of the entire scrollbar */
+}
+
+.img-container::-webkit-scrollbar-thumb {
+  background-color: #C2C2C2;
+  /* color of the scroll thumb */
+  border-radius: 10px;
+  /* roundness of the scroll thumb */
+  border: none;
+  /* creates padding around scroll thumb */
+}
+
+.img-do-container{
+  display: flex;
+}
+
+.delete-user{
+  position: relative;
+  top: -30%;
+  width: 20px;
+  left: -20px;
+}
+
+
