--- a/professor/arquivos/arquivos.css
+++ b/professor/arquivos/arquivos.css
@@ -46,7 +46,7 @@ main {
     align-self: baseline;
     gap: 40px;
     margin-top: 75px;
-    margin-left: 75px;
+    margin-left: 40px;
 }
 
 main a {
@@ -60,19 +60,35 @@ main h4 {
 }
 
 .container-arquivos {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: baseline;
     margin-top: 50px;
-    background: blue;
+    /* background: blue; */
 }
 
 .pasta-arquivo {
-    padding: 10px;
-    gap: 5px;
-    background: beige;
     display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    padding: 20px 0;
+    gap: 15px; 
+    background: beige;
+}
+
+.pasta-arquivo p {
+    margin-top: 12px;
+}
+
+.pasta-arquivo img {
+    cursor: pointer;
+}
+
+.pasta-arquivo i {
+    display: none;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+
+#trashIcon {
+    margin-left: 0;
 }
