--- a/professor/cursos/turmas/turmas.css
+++ b/professor/cursos/turmas/turmas.css
@@ -816,27 +816,12 @@ ul {
     .container-geral {
         margin-left: 8vw;
     }
-
-    #modal-turma {
-        margin-left: 3vw;
-    }
 }
 
 @media (max-width: 1288px) {
 
     .container-geral {
         margin-left: 10vw;
-    }
-
-    #modal-turma {
-        margin-left: 4vw;
-    }
-}
-
-@media (max-width: 1268px) {
-
-    #modal-turma {
-        width: 90%;
     }
 }
 
@@ -845,26 +830,6 @@ ul {
     .container-geral {
         margin-left: 11vw;
         margin-top: 1%;
-    }
-
-    #modal-turma {
-        margin-left: 5vw;
-        width: 80%;
-        height: 40vh;
-    }
-
-    #modal-turma label,
-    #modal-turma input {
-        font-size: 15px;
-    }
-
-    #modal-turma h1 {
-        font-size: 56px;
-    }
-
-    #modal-turma .terceiro_botao,
-    .segundo_botao {
-        font-size: 14px;
     }
 
     .container-geral img {
@@ -895,43 +860,6 @@ ul {
     }
 }
 
-@media (max-width: 1041px) {
-
-    #modal-turma .terceiro_botao {
-        width: 100%;
-    }
-
-    #modal-turma .segundo_botao {
-        width: 90%;
-        margin-left: 20px;
-    }
-}
-
-@media (max-width: 991px) {
-
-    #modal-turma .terceiro_botao {
-        width: 110%;
-    }
-
-    #modal-turma .segundo_botao {
-        width:80%;
-        margin-left: 30px;
-    }
-/* 
-    #modal-turma .terceiro_botao,
-    .segundo_botao {
-        font-size: 11px;
-    }
-} */
-
-@media (max-width: 855px) {
-
-    #modal-turma .terceiro_botao,
-    .segundo_botao {
-        font-size: 13px;
-    }
-}
-
 @media (max-width: 838px) {
 
     .container-geral {
@@ -939,29 +867,6 @@ ul {
     }
 }
 
-@media (max-width: 801px) {
-
-    #modal-turma .terceiro_botao,
-    .segundo_botao {
-        font-size: 12px;
-    }
-}
-
-@media (max-width: 767px) {
-
-    #modal-turma .terceiro_botao {
-        width: 100%;
-    }
-
-    #modal-turma .segundo_botao {
-        width: 130%;
-        margin-left: 0;
-    }
-
-    #modal-turma .buttons {
-        margin-right: 50px;
-    }
-}
 
 @media (max-width: 700px) {
 
@@ -987,24 +892,12 @@ ul {
 
     .button {
         width: 50%;
-        margin-bottom: 10%;
     }
 
     .primeiro_botao, .terceiro_botao {
         font-size: 12px;
-        width: 90%;
-        height: 45px;
-    }
-
-    #modalSobreATurma,
-    #modalGruposTccTurma {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .container .list-group-item {
-        padding: 1.5% 5%;
+        width: 100%;
+        height: 50px;
     }
 
 }
@@ -1027,3 +920,164 @@ ul {
     }
 
 }
+
+    /* .modal {
+        width: 100%;
+        height: 50vh;
+        padding: 2%;
+        border-radius: 10px;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        font-weight: 100;
+    }
+
+    .container-geral {
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .book {
+        display: none;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 5%;
+        height: 80vh;
+        width: 90%;
+        padding: 2%;
+    }
+
+    body {
+        height: 100vh;
+        align-items: center;
+        text-align: center;
+        font-size: 15px;
+    }
+
+    .lab-inp input {
+        font-size: 15px;
+        height: 40px;
+    }
+
+    .ul {
+        margin-top: 1%;
+        height: 100%;
+    }
+
+    .li {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .turma {
+        font-size: clamp(0rem, 10vw, 1.5rem);
+        margin-right: 5%;
+    }
+
+    .nome {
+        font-size: clamp(0rem, 10vw, 1.5rem);
+    }
+
+    .icon label {
+        font-size: clamp(0rem, 10vw, 1.5rem);
+        margin-right: 5%;
+    }
+
+    .modal h1 {
+        font-size: clamp(0rem, 10vw, 1.5rem);
+    }
+
+    .modal {
+        text-align: justify;
+    }
+
+    .turma {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .icone {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .livro {
+        display: none;
+    }
+
+    .icon.inputIconBg i {
+        background-color: #aaa;
+        padding: 9px 4px;
+        border-radius: 4px 0 0 4px;
+    }
+
+    .button5 {
+        width: 90%;
+        background-color: rgba(240, 248, 255, 0);
+        color: white;
+        background-color: #044177;
+        border-radius: 20px;
+        font-weight: 700;
+        border: none;
+        padding: 15px;
+        margin-bottom: 2%;
+    }
+
+    button {
+        font-size: clamp(0rem, 10vw, 0.8rem);
+    }
+
+    .modal .buttons {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .membro-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .ul-professor {
+        margin: 1% 0;
+        width: 100%;
+        height: 70%;
+        border: 2px solid;
+        border-color: #05204a;
+        border-radius: 10px;
+        padding: 2%;
+        overflow-y: auto;
+    }
+
+    .ul-professor li {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .ul-aluno .li {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .iconify {
+        height: 50px;
+    }
+
+    .ul-aluno {
+        margin: 1% 0;
+        width: 100%;
+        height: 70%;
+        border: 2px solid;
+        border-color: #05204a;
+        border-radius: 10px;
+        padding: 2%;
+        overflow-y: auto;
+    }
+} */
