--- a/professor/arquivos/arquivos.css
+++ b/professor/arquivos/arquivos.css
@@ -62,17 +62,46 @@ main h4 {
 .container-arquivos {
     display: flex;
     flex-direction: column;
-    justify-content: baseline;
     margin-top: 50px;
-    background: blue;
+    align-self: baseline;
+    margin-left: 30px;
 }
 
 .pasta-arquivo {
     padding: 10px;
-    gap: 5px;
-    background: beige;
+    gap: 10px;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
+}
+
+/* .pasta-arquivo:nth-child(1) {
+    background: tomato;
+} */
+
+.pasta-arquivo .conteudo-pasta-arquivo {
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    gap: 10px;
+    cursor: pointer;
+    padding: 0 10px;
+}
+
+.pasta-arquivo .conteudo-pasta-arquivo p {
+    margin-top: 12%;
+}
+
+.pasta-arquivo .conteudo-pasta-arquivo:hover {
+    background-color: #F4F4F4;
+}
+
+.pasta-arquivo .imgAcoes {
+    cursor: pointer;
+}
+
+.pasta-arquivo i {
+    display: none;
+    cursor: pointer;
 }
