--- a/aluno/relatorio_banca/disponivel/style.css
+++ b/aluno/relatorio_banca/disponivel/style.css
@@ -9,7 +9,6 @@
     list-style: none;
     width: 200px;
     height: 50px;
-    text-align: center;
     padding: 15px;
     border: 1px solid #c2c2c2;
     color: #c2c2c2;
@@ -18,6 +17,115 @@
     cursor: pointer;
     text-decoration: none;
 }
+
+.form{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    border: 1px solid #044177;
+    border-radius: 30px;
+    border-radius: 30px 30px 30px 30px;
+}
+
+.criteriosText{
+    width: 25%;
+}
+
+.ruim{
+    width: 25%;
+}
+
+.regular{
+    width: 25%;
+}
+
+.otimo{
+    width: 25%;
+}
+
+.criterios h1{
+    font-size: 15px;
+    color: white;
+    font-weight: 700;
+}
+
+p{
+    font-size: 15px;
+}
+
+
+.criterios{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: row;
+    background-color: #044177;
+    border-radius: 29px 29px 0px 0px;
+    padding: 2%;
+    text-align: center;
+}
+
+
+
+.criteriosText{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-weight: 700;
+}
+
+.clareza{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    justify-content: center center;
+    text-align: center;
+    border-bottom: 1px solid #044177;
+}
+
+.clareza p{
+    width: 40%;
+    justify-content: space-between;
+}
+
+.form-control + .form-control {
+    margin-top: 0 !important;
+    
+}
+
+.clareza label{
+    width: 20%;
+    border: none;
+}
+
+.objetividade{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.objetividade p{
+    width: 40%;
+    justify-content: space-between;
+}
+
+.form-control + .form-control {
+    margin-top: 0 !important;
+    align-items: center;
+    
+}
+
+label .form-control{
+}
+
+.objetividade label{
+    width: 20%;
+    border: none;
+}
+
 
 .tipo_plano ul li:first-child {
     border-top-left-radius: 25px;
@@ -32,18 +140,83 @@
 .tipo_plano ul li:hover,
 .tipo_plano ul li.ativo {
     background-color: #044177;
-    color: #fff;
+    color: #fff
 }
 
-.custom-control-input:checked~.custom-control-label::before {
-    color: #fff;
-    border-color: #7B1FA2;
+
+  
+:root {
+    --form-control-color: #044177;
   }
   
-  .custom-control-input:checked~.custom-control-label.red::before {
-    background-color: #044177;
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
   }
   
-  .custom-control-input:checked~.custom-control-label.green::before {
-    background-color: #044177;
+  body {
+    margin: 0;
+  }
+  
+
+  
+  .form-control {
+    font-family: system-ui, sans-serif;
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 1.1;
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.5em;
+  }
+  
+  .form-control + .form-control {
+    margin-top: 1em;
+  }
+  
+  .form-control:focus-within {
+    color: var(--form-control-color);
+  }
+  
+  input[type=radio] {
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    /* Remove most all native input styles */
+    -moz-appearance: none;
+         appearance: none;
+    /* For iOS < 15 */
+    background-color: var(--form-background);
+    /* Not removed via appearance */
+    margin: 0;
+    font: inherit;
+    color: currentColor;
+    width: 1.15em;
+    height: 1.15em;
+    border: 0.15em solid currentColor;
+    border-radius: 50%;
+    transform: translateY(-0.075em);
+    display: grid;
+    place-content: center;
+  }
+  
+  input[type=radio]::before {
+    content: "";
+    width: 0.65em;
+    height: 0.65em;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em var(--form-control-color);
+    /* Windows High Contrast Mode */
+    background-color: CanvasText;
+  }
+  
+  input[type=radio]:checked::before {
+    transform: scale(1);
+  }
+  
+  input[type=radio]:focus {
+    outline: max(2px, 0.15em) solid currentColor;
+    outline-offset: max(2px, 0.15em);
   }
