--- a/professor/arquivos/arquivos.css
+++ b/professor/arquivos/arquivos.css
@@ -20,6 +20,16 @@ main {
     /* background: #000; */
 }
 
+.bg {
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.658);
+}
+
 .cursos_existentes input {
     background-color: #e3e3e3;
     border-radius: 10px;
@@ -87,6 +97,7 @@ main h4 {
     gap: 10px;
     cursor: pointer;
     padding: 0 10px;
+    user-select: none;
 }
 
 .pasta-arquivo .conteudo-pasta-arquivo p {
@@ -94,7 +105,7 @@ main h4 {
 }
 
 .pasta-arquivo .conteudo-pasta-arquivo:hover {
-    background-color: #F4F4F4;
+    background-color: #e3e3e3;
 }
 
 .pasta-arquivo .imgAcoes {
@@ -103,24 +114,32 @@ main h4 {
 
 .container_images_acoes {
     display: flex;
-    /* width: 100%; */
     padding: 10px;
-    gap: 10px;
-    
+    gap: 5px;
+    user-select: none;
+}
+
+.container_images_acoes img:hover {
+    background-color: #e3e3e3;
 }
 
 .container_images_acoes i {
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
 }
 
 .container_images_acoes i:hover {
-    background-color: #A1A1A1;
+    background-color: #e3e3e3;
 }
 
 #fecharMenuOpcoes {
-    width: 20px;
-    height: 20px;
-    background-color: #808080;
+    width: 25px;
+    height: 25px;
+    background-color: #c2c2c2;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -129,4 +148,51 @@ main h4 {
 .pasta-arquivo i {
     display: none;
     cursor: pointer;
+}
+
+#fecharMenuOpcoes {
+    display: none;
+}
+
+.modal {
+    width: 60%;
+    height: 30vh;
+    background-color: rgb(255, 255, 255);
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: "Poppins", sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    align-items: center;
+    font-weight: 100;
+}
+
+.buttons {
+    display: flex;
+    width: 80%;
+    gap: 10px;
+}
+
+#btnConfirmarExclusao {
+    background-color: #05204A;
+}
+
+.segundo_botao {
+    margin-top: 2vh;
+    width: 98%;
+    color: white;
+    font-weight: 700;
+    border-radius: 30px;
+    border: none;
+    padding: 15px;
+    background-color: #c2c2c2;
+    margin-right: 5%;
 }
