--- a/aluno/relatorio_banca/disponivel/style.css
+++ b/aluno/relatorio_banca/disponivel/style.css
@@ -53,7 +53,6 @@ p{
     font-size: 15px;
 }
 
-
 .criterios{
     display: flex;
     width: 100%;
@@ -65,13 +64,12 @@ p{
     text-align: center;
 }
 
-
-
 .criteriosText{
     display: flex;
     flex-direction: column;
     width: 100%;
     font-weight: 700;
+    text-align: center;
 }
 
 .clareza{
@@ -81,7 +79,6 @@ p{
     justify-content: space-between;
     align-items: center;
     justify-content: center center;
-    text-align: center;
     border-bottom: 1px solid #044177;
 }
 
@@ -90,21 +87,25 @@ p{
     justify-content: space-between;
 }
 
-.form-control + .form-control {
-    margin-top: 0 !important;
-    
-}
-
 .clareza label{
     width: 20%;
-    border: none;
+    border-radius: 0%;
+    display: flex;
+    border: 1px solid #044177;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
+
 .objetividade{
-    display: flex;
+    display: flex !important;
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
+    justify-content: center center;
+    border-bottom: 1px solid #044177;
 }
 
 .objetividade p{
@@ -112,18 +113,21 @@ p{
     justify-content: space-between;
 }
 
+.objetividade label{
+    width: 20%;
+    border-radius: 0%;
+    display: flex;
+    border: 1px solid #044177;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .form-control + .form-control {
     margin-top: 0 !important;
     align-items: center;
     
-}
-
-label .form-control{
-}
-
-.objetividade label{
-    width: 20%;
-    border: none;
 }
 
 
@@ -144,79 +148,77 @@ label .form-control{
 }
 
 
-  
-:root {
-    --form-control-color: #044177;
-  }
-  
-  *,
-  *:before,
-  *:after {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
 
-  
-  .form-control {
-    font-family: system-ui, sans-serif;
-    font-size: 2rem;
-    font-weight: bold;
-    line-height: 1.1;
-    display: grid;
-    grid-template-columns: 1em auto;
-    gap: 0.5em;
-  }
-  
-  .form-control + .form-control {
-    margin-top: 1em;
-  }
-  
-  .form-control:focus-within {
-    color: var(--form-control-color);
-  }
-  
-  input[type=radio] {
-    /* Add if not using autoprefixer */
-    -webkit-appearance: none;
-    /* Remove most all native input styles */
-    -moz-appearance: none;
-         appearance: none;
-    /* For iOS < 15 */
-    background-color: var(--form-background);
-    /* Not removed via appearance */
-    margin: 0;
-    font: inherit;
-    color: currentColor;
-    width: 1.15em;
-    height: 1.15em;
-    border: 0.15em solid currentColor;
-    border-radius: 50%;
-    transform: translateY(-0.075em);
-    display: grid;
-    place-content: center;
-  }
-  
-  input[type=radio]::before {
-    content: "";
-    width: 0.65em;
-    height: 0.65em;
-    border-radius: 50%;
-    transform: scale(0);
-    transition: 120ms transform ease-in-out;
-    box-shadow: inset 1em 1em var(--form-control-color);
-    /* Windows High Contrast Mode */
-    background-color: CanvasText;
-  }
-  
-  input[type=radio]:checked::before {
-    transform: scale(1);
-  }
-  
-  input[type=radio]:focus {
-    outline: max(2px, 0.15em) solid currentColor;
-    outline-offset: max(2px, 0.15em);
-  }
+:root {
+--form-control-color: #044177;
+}
+
+*,
+*:before,
+*:after {
+box-sizing: border-box;
+}
+
+body {
+margin: 0;
+}
+
+.form-control {
+font-family: system-ui, sans-serif;
+font-size: 2rem;
+font-weight: bold;
+line-height: 1.1;
+display: grid;
+grid-template-columns: 1em auto;
+gap: 0.5em;
+}
+
+.form-control + .form-control {
+margin-top: 1em;
+}
+
+.form-control:focus-within {
+color: var(--form-control-color);
+}
+
+input[type=radio] {
+/* Add if not using autoprefixer */
+-webkit-appearance: none;
+/* Remove most all native input styles */
+-moz-appearance: none;
+        appearance: none;
+/* For iOS < 15 */
+background-color: var(--form-background);
+/* Not removed via appearance */
+margin: 0;
+font: inherit;
+color: currentColor;
+width: 1.15em;
+height: 1.15em;
+border: 0.15em solid currentColor;
+border-radius: 50%;
+transform: translateY(-0.075em);
+display: grid;
+place-content: center;
+}
+
+input[type=radio]::before {
+content: "";
+width: 0.65em;
+height: 0.65em;
+border-radius: 50%;
+transform: scale(0);
+transition: 120ms transform ease-in-out;
+box-shadow: inset 1em 1em var(--form-control-color);
+/* Windows High Contrast Mode */
+background-color: CanvasText;
+}
+
+input[type=radio]:checked::before {
+transform: scale(1);
+}
+
+input[type=radio]:focus {
+outline: max(2px, 0.15em) solid currentColor;
+outline-offset: max(2px, 0.15em);
+}
