--- a/professor/cursos/turmas/turmas.css
+++ b/professor/cursos/turmas/turmas.css
@@ -11,6 +11,16 @@ body {
     overflow-y: hidden;
 }
 
+.bg {
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.658);
+}
+
 .container-geral {
     display: flex;
     align-items: center;
@@ -334,7 +344,7 @@ ul {
 }
 
 .modal h1 {
-    font-size: 70px;
+    font-size: 55px;
     font-weight: 700;
     color: #05204a;
 }
