arrumando o botão de criar nova tarefa

--- a/aluno/tarefas/style.css
+++ b/aluno/tarefas/style.css
@@ -535,11 +535,7 @@ body {
     text-decoration: none;
 }
 
-#div1{
-  display: none;
-}
-
-#div2{
+.col-md-12 .modal-add-tarefa {
   display: none;
 }
 
