--- a/instituicao/usuarios/style.css
+++ b/instituicao/usuarios/style.css
@@ -551,7 +551,7 @@ ul {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    z-index: 9999;
+    z-index: 999;
 }
 
 #modal-editar {
@@ -575,7 +575,7 @@ ul {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    z-index: 9999;
+    z-index: 999;
 }
 
 .lab-inp {
@@ -751,7 +751,7 @@ ul {
     }
 
     #modal-excluir .buttons{
-width: 100%5
+width: 100%
     }
 }
 
