--- a/instituicao/usuarios/style.css
+++ b/instituicao/usuarios/style.css
@@ -143,7 +143,7 @@
 }
 
 #grupo {
-    display: none;
+    display: flex;
     flex-direction: column;
 }
 
@@ -554,6 +554,10 @@ ul {
     z-index: 999;
 }
 
+.modal-listagem {
+    height: 60vh;
+}
+
 #modal-editar {
     display: none;
     top: 0;
@@ -561,7 +565,7 @@ ul {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     background-color: rgb(255, 255, 255);
     align-items: center;
     flex-direction: column;
